# Alchemist-NCurses

./: CMakeLists.txt  README.md  event.cpp  event.h  gamewindow.cpp  gamewindow.h  main  main.cpp  menuwindow.cpp  menuwindow.h  statuswindow.cpp  statuswindow.h
Testes/: teste
